Fix classpath issue in the run.sh file